<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.caps.ui.home.HomeFragment"
        android:label="@string/title_bar_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_favouriteFragment"
            app:destination="@id/navigation_favourite"
            app:popUpTo="@id/navigation_home"
            app:popUpToSaveState="true"/>
        <action
            android:id="@+id/action_homeFragment_to_cameraFragment"
            app:destination="@+id/navigation_camera"
            app:popUpTo="@id/navigation_home"
            app:popUpToSaveState="true"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_camera"
        android:name="com.example.caps.ui.camera.ScanFragment"
        android:label="@string/title_bar_camera"
        tools:layout="@layout/fragment_scan" />

    <fragment
        android:id="@+id/navigation_favourite"
        android:name="com.example.caps.ui.notifications.FavouriteFragment"
        android:label="@string/title_bar_favourite"
        tools:layout="@layout/fragment_favourite" />
</navigation>